Fix whitespace

--- a/web/src/components/homepageExplainer.module.css
+++ b/web/src/components/homepageExplainer.module.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
+
+  @media (max-width: 600px) {
+    margin: 50px 0 0;
+  }
 }
 
 .root .title {
