--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -15,7 +15,7 @@
   color: var(--color-white);
 
   @media (max-width: 800px) {
-    height: 200px;
+    height: 170px;
   }
 }
 
